Fixed overflow of front page

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ a strong {
 	position: relative;
 	left: 420px;
 	top: -170px;
+	width: 550px;
 }
 #bigbuttons h3{
 	visibility: hidden;
